# SdrGlut

./: CMakeLists.txt  LICENSE  License.txt  README.md  installMac2  makefileExample  makefileM1Brew  makefileMACINTOSH  makefileMACINTOSH2  makefileRaspbian  makefileUbunta  makefileUbunta2  makefilesMSYS2  makefilesMSYS2-Glut  minstall_WSL_Ubuntu.txt
CExpress/: BatchFile.h  FFT2.c  File8.h  FileList.h  Limits2.h  Matrix.h  Message.h  SetFrameData.h  Utilities2.c  Utilities2.h  uFiles.h
Classes/: CLInesPlotLabels.cpp  CLInesPlotLabels.h  CLines.cpp  CLines.h  CLinesPlotBox.cpp  CLinesPlotBox.h  CWindow.cpp  CWindow.h  ClinesAttributes.cpp  ClinesAttributes.h  ClinesPlotAttributes.cpp  ClinesPlotAttributes.h  Contours.h  Transmit.cpp  fastfir.cpp  fastfir.h  fft.cpp  fft.h
Digital/: BatchFile.cpp  BatchFile.h  FFT.cpp  Poly.cpp  Poly.h
DrawFindPointHistory/: GridPlot.c  GridPlot.h  Linedata.h
Glew/: build.bat  build64.bat
Glut/: Build  README.txt  build-debug.bat  build.bat  build64.bat  glut_event.c  glut_util.c  glut_win.c  glut_winmisc.c  glutbitmap.h  glutint.h  win32_menu.c
Glut/windows/: win32_util.c
KdTree-routines/: Defs.h  Tools.h
Listen/: CMakeLists.txt  Clisten.cpp  Clisten.h  cStack.cpp  cStack.h  listen-udp.c  listen.cpp  listen.x  mThread.cpp  main.cpp  makefile  makefileM1Brew  makefileMACINTOSH  makefileOLD  makefileRaspbian  printInfo.cpp  udp.cpp
Listen/old-versions/: mThread.cpp  mThread.h  mThreadPC.c  (+2 more)
MainSource/: BackgroundQ.c  BackgroundQ.h  DialogFileOpen.cpp  DialogFileOpen.h  DialogFolder.cpp  DialogFolder.h  DialogRangeData.h  DialogSave.cpp  DialogSave.h  DrawPalette.h  File8.c  File8.h  Getpalette.c  LoadFiles.h  PlayIQ.cpp  PlayIQ.h  QuitDialog.cpp  QuitDialog.h  RecordIQ.cpp  RecordIQ.h  Scene.c  Scene.h  SceneList.c  SceneList.h  Utilities.c  Utilities.h  WriteToGLUIWindow.cpp  agc.cpp  audiolib.cpp  audiolib.h  cMalloc.c  cMallocTTT.c  datatypes.h  dialogTest.cpp  dialogTime.cpp  dialogTimeIQ.cpp  eMemory.cpp  eMemory.h  fir.cpp  fir.h  (+14 more)
RaceSDR/: Race.cpp  agc.cpp  agc.h  datatypes.h  mThread.cpp  mThread.h  raceFMsdr.cpp
Radio/: DialogRadio.cpp  DialogRadio.h  RaceFastsdr.cpp  RaceFastsdr.h  Radio.cpp  Radio.h  SocketDefs.h  WriteToWindow.cpp  send.cpp  smeter.cpp  smeter.h
SDRPlay-indepentRX-W/: SoapySDRPlay.tgz
SdrFile/: Audio2.cpp  Audio2.h  AudioFile.cpp  AudioFile.h  DialogAudioFile.cpp  DialogFileOpenAres.cpp  DialogFileOpenAres.h  DialogSdrFile.cpp  DialogSdrFile.h  SdrFile.cpp  SdrFile.h
SdrGlut-Install/: SdrGlut-Install.vdproj
SdrGlut-Windows/: File8-Windows.c  SdrGlut.rc  SdrGlut.sln  SdrGlut.vcxproj  SdrGlut.vcxproj.filters  speechcontrol.py
SdrGlut.xcodeproj/: project.pbxproj
examples01/: test03.in  test06a.in  test06c.in  test06d.in  test10.in  test11.in  test12.in  test15.in  test16.in  test17.in  test20.in  test21.in  test24.in  test25.in  test26.in  test27.in  test28.in  test29.in  test30.in  test31.in  test32.in  test35.in  test36.in  test37.in  test38.in  test39.in  test40.in  test42.in  test45.in  test48.in  test49.in  test50.in  test51.in
examples02/: filter01.in  filter04.in  filter06.in  filter07.in  filter09.in  filter10.in  filter11.in  filter12.in  filter12a.in  impulse01.in  impulse02.in  impulse03.in  impulse03a.in  impulse03b.in  impulse03c.in  impulse04.in  impulse05.in  impulse06.in  impulse07a.in  impulse07b.in  impulse07d.in  impulse07f.in  impulse07g.in  impulse07h.in  impulse07i.in  impulse09.in
examples03/: band01.in  band02.in  bandpass.in  bandpass02.in  bandstop.in  bandstop01.in  book314.in  book314_02.in  butter3_01.in  butter3_03.in  cbandpass.in  cbandpass01.in  cbandstop.in  cbandstop01.in  chev01.in  chev02.in  chighpass.in  clowpass.in  high02.in  low01.in  low02.in  low03.in  low04.in  low05.in  low06.in  lowpass.in  lowpass02.in  notch.in  notch02.in  writecbandpass.in  writelowpass.in
filters/tcp-support/: CMakeLists.txt  listen.cpp
filters/tcp-support/SampleSDR6/SampleSDR/: SampleSDR.vcxproj
filters/tcp-support/SampleSDR6/SampleSDR/x64/Debug/: vc141.idb
filters/tcp-support/SampleSDR6/SampleSDR/x64/Debug/SampleSDR.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SampleSDR.lastbuildstate  link.command.1.tlog
filters/tcp-support/SampleSDR6/SampleSDR/x64/Release/SampleSDR.tlog/: CL.command.1.tlog  CL.write.1.tlog  SampleSDR.lastbuildstate  SampleSDR.write.1u.tlog  link.command.1.tlog  link.write.1.tlog
filters/tcp-support/old-versions/: SocketDefs.h  listen.cpp  listenOLD1.cpp
freeglut-3.2.1/: BUILD_INFO
glui-routines/: glui.cpp  glui_column.cpp  glui_control.cpp  glui_edittext.cpp  glui_filebrowser.cpp  glui_list.cpp  glui_radio.cpp  glui_scrollbar.cpp  glui_textbox.cpp  glui_treepanel.cpp  mShowOpenGL-Info.plist
hdflib/: install.txt  installUbuntu.txt
include2/: dfi.h  jpeg32.lib
iqSDR/: README.txt  makefileM1  makefileMacintosh  makefileMacintosh2.txt  makefileMacintoshM1.txt  makefileRaspbian  makefileRaspbianOLD  makefileUbuntu  makefileUbuntuOLD
iqSDR/hdf-4.2.5/: MAKEFS.COM  MAKENOF.COM  Makefile.am  Makefile.in  atom.h  bitvect.h  build.bat  build64.bat  cdeflate.h  cnbit.c  cnone.c  cnone.h  crle.h  cskphuff.c  cskphuff.h  cszip.c  cszip.h  df.h  dfan.c  dfconv.c  dffunc.inc  dfimcomp.c  dfjpeg.c  dfkcray.c  dfkswap.c  dfkvms.c  dfp.c  dfpf.c  dfr8.c  dfrig.h  dfsd.h  dfsdff.f  dfstubs.c  dfufp2i.c  dfufp2i.h  dfufp2if.c  dfufp2iff.f  dfunjpeg.c  dfutilf.c  dir_mac.c  (+40 more)
iqSDR/hdf-4.2.5/fort_ps/: mfgrpf.c  mfgrpff.f  vattrpf.c  vattrpff.f  vgpf.c  vgpff.f
obsolete/: Transmit.cpp  Transmit.h  build64.bat  build642.bat  forceCascade.cpp  writetestcascade.cpp
sdrPlay/: makefileMACINTOSH  makefileUbuntu
sdrReceive/: README.txt  heatmap.py  makefileM1  makefileM1Brew  makefileMACINTOSH  makefileRaspbian  makefileUbuntu  rx_fm.txt  sendAM.cpp  sendFFT01.cpp  sendFFT02.cpp  sendFreq08.cpp  sendFreq09.cpp  sendFreq10.cpp  sendUSB.cpp
sdrTest/: README.txt  SocketDefs.h  cMalloc.c  cMalloc.cpp  doAudioOLD.cpp  firstFile.h  mThread.cpp  mThread.h  makefileMACINTOSH  makefileUbuntu  makefileUbuntuOLD  out  out1  out2  sdrTest.cpp
(+405 files in other folders)
